--- a/index.html
+++ b/index.html
@@ -5,47 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
     <style>
-        body { font-family: 'Poppins', sans-serif; background-color: #f4f7f6; }
-        .card { border: none; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
-        .btn-primary { background: linear-gradient(45deg, #007bff, #0056b3); border: none; padding: 10px 25px; border-radius: 10px; }
-        .form-control { border-radius: 10px; padding: 12px; border: 1px solid #ddd; }
-        .form-control:focus { box-shadow: 0 0 10px rgba(0,123,255,0.25); }
+        body { background-color: #f0f2f5; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .nav-tabs .nav-link { color: #495057; font-weight: 600; border: none; }
+        .nav-tabs .nav-link.active { color: #0d6efd; border-bottom: 3px solid #0d6efd; background: none; }
+        .card { border-radius: 15px; border: none; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
+        .btn-save { background-color: #0d6efd; color: white; border-radius: 8px; padding: 10px; }
     </style>
 </head>
 <body>
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card p-4">
-                <div class="text-center mb-4">
-                    <h2 class="fw-bold text-primary">Diiwaangelinta Ardayda</h2>
-                    <p class="text-muted">Ku dar xogta ardayga cusub si toos ah</p>
-                </div>
+<div class="container py-5">
+    <div class="text-center mb-5">
+        <h1 class="fw-bold text-dark">Maamulka Dugsiga</h1>
+        <p class="text-muted">Nidaam fudud oo ku shaqaynaya Google Sheets</p>
+    </div>
 
-                <form id="studentForm">
-                    <div class="mb-3">
-                        <label class="form-label">Magaca oo Full ah</label>
-                        <input type="text" id="name" class="form-control" placeholder="Tusaale: Ahmed Ali" required>
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Fasalka</label>
-                        <select id="className" class="form-select form-control" required>
-                            <option value="">Dooro Fasalka...</option>
-                            <option value="Grade 1">Grade 1</option>
-                            <option value="Grade 2">Grade 2</option>
-                            <option value="Grade 3">Grade 3</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Telefoonka Waalidka</label>
-                        <input type="tel" id="phone" class="form-control" placeholder="61XXXXXXX" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100 shadow-sm" id="submitBtn">Kaydi Xogta</button>
+    <ul class="nav nav-tabs justify-content-center mb-4" id="myTab" role="tablist">
+        <li class="nav-item"><button class="nav-link active" data-bs-toggle="tab" data-bs-target="#student">Diiwaangelinta</button></li>
+        <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#attendance">Attendance</button></li>
+        <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#fees">Lacagaha</button></li>
+    </ul>
+
+    <div class="tab-content mt-3">
+        <div class="tab-pane fade show active" id="student">
+            <div class="col-md-6 mx-auto card p-4">
+                <h4 class="mb-3">Xogta Ardayga Cusub</h4>
+                <form onsubmit="handleForm(event, 'student')">
+                    <input type="text" id="s_name" class="form-control mb-3" placeholder="Magaca oo dhammaystiran" required>
+                    <input type="text" id="s_class" class="form-control mb-3" placeholder="Fasalka" required>
+                    <input type="tel" id="s_phone" class="form-control mb-3" placeholder="Telefoonka Waalidka" required>
+                    <button type="submit" class="btn btn-save w-100">Kaydi Ardayga</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="attendance">
+            <div class="col-md-6 mx-auto card p-4">
+                <h4 class="mb-3">Xaadirinta Maalinlaha ah</h4>
+                <form onsubmit="handleForm(event, 'attendance')">
+                    <input type="text" id="a_name" class="form-control mb-3" placeholder="Magaca Ardayga" required>
+                    <select id="a_status" class="form-select mb-3">
+                        <option value="Xaadir">Xaadir (Present)</option>
+                        <option value="Ma Joogo">Ma Joogo (Absent)</option>
+                    </select>
+                    <button type="submit" class="btn btn-save w-100">Diiwaangeli Xaadirinta</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="fees">
+            <div class="col-md-6 mx-auto card p-4">
+                <h4 class="mb-3">Maareynta Lacagaha</h4>
+                <form onsubmit="handleForm(event, 'fees')">
+                    <input type="text" id="f_name" class="form-control mb-3" placeholder="Magaca Ardayga" required>
+                    <input type="number" id="f_amount" class="form-control mb-3" placeholder="Cadadka Lacagta ($)" required>
+                    <input type="text" id="f_month" class="form-control mb-3" placeholder="Bisha" required>
+                    <button type="submit" class="btn btn-save w-100">Kaydi Lacagta</button>
                 </form>
             </div>
         </div>
@@ -53,54 +70,37 @@
 </div>
 
 <script>
-    const scriptURL = 'HALKAN_GELI_URL_KA_APP_SCRIPT'; // <--- Ku bedel Web App URL-kaagii
-    const form = document.getElementById('studentForm');
-    const btn = document.getElementById('submitBtn');
+    const scriptURL = 'HALKAN_GELI_WEB_APP_URL';
 
-    form.addEventListener('submit', e => {
-        e.preventDefault();
+    async function handleForm(event, type) {
+        event.preventDefault();
         
-        // Muuji Loading Popup
-        Swal.fire({
-            title: 'Waa la kaydinayaa...',
-            text: 'Fadlan sug daqiiqad',
-            allowOutsideClick: false,
-            didOpen: () => { Swal.showLoading() }
-        });
+        Swal.fire({ title: 'Waa la dirayaa...', allowOutsideClick: false, didOpen: () => Swal.showLoading() });
 
-        btn.disabled = true;
+        let data = { type: type };
+        if(type === 'student') {
+            data.name = document.getElementById('s_name').value;
+            data.className = document.getElementById('s_class').value;
+            data.phone = document.getElementById('s_phone').value;
+        } else if(type === 'attendance') {
+            data.name = document.getElementById('a_name').value;
+            data.status = document.getElementById('a_status').value;
+        } else if(type === 'fees') {
+            data.name = document.getElementById('f_name').value;
+            data.amount = document.getElementById('f_amount').value;
+            data.month = document.getElementById('f_month').value;
+        }
 
-        const data = {
-            name: document.getElementById('name').value,
-            className: document.getElementById('className').value,
-            phone: document.getElementById('phone').value
-        };
-
-        fetch(scriptURL, {
-            method: 'POST',
-            body: JSON.stringify(data)
-        })
-        .then(response => {
-            btn.disabled = false;
-            // Guul Popup
-            Swal.fire({
-                icon: 'success',
-                title: 'Waa la kaydiyay!',
-                text: 'Xogta ardayga si guul leh ayaa loo kaydiyay.',
-                confirmButtonColor: '#007bff'
-            });
-            form.reset();
-        })
-        .catch(error => {
-            btn.disabled = false;
-            Swal.fire({
-                icon: 'error',
-                title: 'Khalad ayaa dhacay',
-                text: 'Isku day mar kale.'
-            });
-        });
-    });
+        try {
+            await fetch(scriptURL, { method: 'POST', body: JSON.stringify(data) });
+            Swal.fire('Guul!', 'Xogta si fiican ayaa loo kaydiyay.', 'success');
+            event.target.reset();
+        } catch (error) {
+            Swal.fire('Khalad', 'Xogta lama kaydin karo hadda.', 'error');
+        }
+    }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
