--- a/index.html
+++ b/index.html
@@ -6,58 +6,37 @@
     <title>School Management System</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        body { background-color: #f3f4f6; font-family: 'Inter', sans-serif; }
-    </style>
 </head>
-<body class="flex items-center justify-center min-h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
-    <div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-md border-t-4 border-blue-600">
-        <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Diiwaangelinta Ardayda</h2>
+    <div class="bg-white p-8 rounded-lg shadow-xl w-full max-w-md">
+        <h2 class="text-2xl font-bold mb-6 text-center text-blue-600">Diiwaangelinta Ardayda</h2>
         
         <form id="studentForm" class="space-y-4">
             <div>
-                <label class="block text-sm font-medium text-gray-700">Magaca Buuxa</label>
-                <input type="text" id="name" required 
-                    class="mt-1 block w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200">
+                <label class="block text-sm font-medium">Magaca Ardayga</label>
+                <input type="text" id="name" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
             </div>
-
             <div>
-                <label class="block text-sm font-medium text-gray-700">Fasalka</label>
-                <input type="text" id="class" required 
-                    class="mt-1 block w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200">
+                <label class="block text-sm font-medium">Fasalka</label>
+                <input type="text" id="class" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
             </div>
-
             <div>
-                <label class="block text-sm font-medium text-gray-700">Taleefanka</label>
-                <input type="tel" id="phone" required 
-                    class="mt-1 block w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500 transition duration-200">
+                <label class="block text-sm font-medium">Taleefanka Pr/Waalidka</label>
+                <input type="text" id="phone" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
             </div>
-
-            <button type="submit" id="submitBtn"
-                class="w-full bg-blue-600 text-white font-bold py-3 rounded-lg hover:bg-blue-700 transform hover:scale-[1.02] transition duration-200 shadow-lg">
-                Keydi Xogta
-            </button>
+            <button type="submit" id="submitBtn" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 transition">Save Ardayga</button>
         </form>
     </div>
 
     <script>
-        const scriptURL = 'HALKAN_GELI_URL_KA_APPS_SCRIPT'; // <--- Ku bedel Web App URL-kaagii
+        const scriptURL = 'HALKAN_GELI_WEB_APP_URL_KAAGA'; // Ku bedel URL-kii Google Apps Script
         const form = document.getElementById('studentForm');
-        const btn = document.getElementById('submitBtn');
 
         form.addEventListener('submit', e => {
             e.preventDefault();
-            
-            // Tus loading popup
-            Swal.fire({
-                title: 'Waa la dirayaa...',
-                text: 'Fadlan sug inta xogta la keydinayo',
-                allowOutsideClick: false,
-                didOpen: () => { Swal.showLoading() }
-            });
-
-            btn.disabled = true;
+            document.getElementById('submitBtn').disabled = true;
+            document.getElementById('submitBtn').innerText = "Waa la dirayaa...";
 
             const data = {
                 name: document.getElementById('name').value,
@@ -71,21 +50,23 @@
             })
             .then(response => {
                 Swal.fire({
+                    title: 'Waa lagu guulaystay!',
+                    text: 'Xogta ardayga waa la keydiyey.',
                     icon: 'success',
-                    title: 'Waa la keydiyey!',
-                    text: 'Xogta ardayga si guul leh ayaa loo kaydiyey.',
-                    confirmButtonColor: '#2563eb'
+                    confirmButtonText: 'OK'
                 });
                 form.reset();
-                btn.disabled = false;
             })
             .catch(error => {
                 Swal.fire({
-                    icon: 'error',
-                    title: 'Khalad ayaa dhacay',
-                    text: 'Lama xiriiri karo database-ka.',
+                    title: 'Khalad!',
+                    text: 'Xogta ma la dirin, dib u isku day.',
+                    icon: 'error'
                 });
-                btn.disabled = false;
+            })
+            .finally(() => {
+                document.getElementById('submitBtn').disabled = false;
+                document.getElementById('submitBtn').innerText = "Save Ardayga";
             });
         });
     </script>
