--- a/index.html
+++ b/index.html
@@ -5,70 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Management System</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-gray-50 font-sans">
 
-    <div class="bg-white p-8 rounded-lg shadow-xl w-full max-w-md">
-        <h2 class="text-2xl font-bold mb-6 text-center text-blue-600">Diiwaangelinta Ardayda</h2>
-        
-        <form id="studentForm" class="space-y-4">
-            <div>
-                <label class="block text-sm font-medium">Magaca Ardayga</label>
-                <input type="text" id="name" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
+    <div class="flex h-screen">
+        <div class="w-64 bg-white border-r shadow-sm">
+            <div class="p-6 border-b">
+                <h1 class="text-xl font-bold text-gray-800">School Management</h1>
             </div>
-            <div>
-                <label class="block text-sm font-medium">Fasalka</label>
-                <input type="text" id="class" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
-            </div>
-            <div>
-                <label class="block text-sm font-medium">Taleefanka Pr/Waalidka</label>
-                <input type="text" id="phone" required class="w-full p-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none">
-            </div>
-            <button type="submit" id="submitBtn" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 transition">Save Ardayga</button>
-        </form>
+            <nav class="p-4 space-y-2">
+                <p class="text-xs text-gray-400 uppercase font-semibold pl-2">Main</p>
+                <a href="#" class="flex items-center p-2 bg-black text-white rounded-lg">
+                    <i class="fas fa-th-large mr-3"></i> Dashboard
+                </a>
+                <a href="#" class="flex items-center p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
+                    <i class="fas fa-user-graduate mr-3"></i> Students
+                </a>
+                <a href="#" class="flex items-center p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
+                    <i class="fas fa-chalkboard-teacher mr-3"></i> Teachers
+                </a>
+                <a href="#" class="flex items-center p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
+                    <i class="fas fa-users mr-3"></i> Parents
+                </a>
+                <a href="#" class="flex items-center p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
+                    <i class="fas fa-book mr-3"></i> Classes
+                </a>
+                <p class="text-xs text-gray-400 uppercase font-semibold pl-2 pt-4">Financial</p>
+                <a href="#" class="flex items-center p-2 text-gray-600 hover:bg-gray-100 rounded-lg transition">
+                    <i class="fas fa-file-invoice-dollar mr-3"></i> Fee Management
+                </a>
+            </nav>
+        </div>
+
+        <div class="flex-1 flex flex-col overflow-hidden">
+            <header class="h-16 bg-white border-b flex items-center justify-between px-8">
+                <h2 class="text-xl font-semibold text-gray-800">Dashboard</h2>
+                <button onclick="showAddStudentForm()" class="bg-black text-white px-4 py-2 rounded-lg text-sm">
+                    + Add Student
+                </button>
+            </header>
+
+            <main class="flex-1 overflow-x-hidden overflow-y-auto p-8">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
+                    <div class="bg-white p-6 rounded-xl border shadow-sm">
+                        <div class="flex justify-between items-start">
+                            <div>
+                                <p class="text-sm text-gray-500">Total Students</p>
+                                <h3 class="text-2xl font-bold mt-1">1,247</h3>
+                                <p class="text-xs text-blue-500 mt-2">Active students this year</p>
+                            </div>
+                            <div class="p-2 bg-blue-50 rounded-lg text-blue-500">
+                                <i class="fas fa-user-graduate"></i>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+
+                <div class="bg-white rounded-xl border shadow-sm p-6">
+                    <h4 class="font-bold text-gray-800 mb-4">Recent Activities</h4>
+                    <div class="space-y-4">
+                        <div class="flex items-center text-sm border-l-4 border-blue-500 pl-4">
+                            <p>New student <strong>John Doe</strong> enrolled in Grade 10A</p>
+                            <span class="ml-auto text-gray-400">2 hours ago</span>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
     </div>
 
     <script>
-        const scriptURL = 'HALKAN_GELI_WEB_APP_URL_KAAGA'; // Ku bedel URL-kii Google Apps Script
-        const form = document.getElementById('studentForm');
-
-        form.addEventListener('submit', e => {
-            e.preventDefault();
-            document.getElementById('submitBtn').disabled = true;
-            document.getElementById('submitBtn').innerText = "Waa la dirayaa...";
-
-            const data = {
-                name: document.getElementById('name').value,
-                class: document.getElementById('class').value,
-                phone: document.getElementById('phone').value
-            };
-
-            fetch(scriptURL, {
-                method: 'POST',
-                body: JSON.stringify(data)
-            })
-            .then(response => {
-                Swal.fire({
-                    title: 'Waa lagu guulaystay!',
-                    text: 'Xogta ardayga waa la keydiyey.',
-                    icon: 'success',
-                    confirmButtonText: 'OK'
-                });
-                form.reset();
-            })
-            .catch(error => {
-                Swal.fire({
-                    title: 'Khalad!',
-                    text: 'Xogta ma la dirin, dib u isku day.',
-                    icon: 'error'
-                });
-            })
-            .finally(() => {
-                document.getElementById('submitBtn').disabled = false;
-                document.getElementById('submitBtn').innerText = "Save Ardayga";
+        // Tusaale: Popup-ka Add Student
+        function showAddStudentForm() {
+            Swal.fire({
+                title: 'Diiwaangeli Arday Cusub',
+                html:
+                    '<input id="swal-input1" class="swal2-input" placeholder="Magaca">' +
+                    '<input id="swal-input2" class="swal2-input" placeholder="Fasalka">',
+                showCancelButton: true,
+                confirmButtonText: 'Keydi',
+                confirmButtonColor: '#000',
+                preConfirm: () => {
+                    // Halkan code-kaagii hore ee Google Sheets ayaa galaya
+                }
             });
-        });
+        }
     </script>
 </body>
 </html>
